# betting_bot

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DESIGN.md  README.md  RUNBOOK.md  alembic.ini  pyproject.toml
config/: bankroll.yaml  books.yaml  leagues.yaml  markets.yaml  thresholds.yaml
src/betting_bot/: config.py  ids.py  logging_setup.py  yaml_config.py
src/betting_bot/bankroll/: ledger.py
src/betting_bot/cli/: healthcheck.py  run_pipeline.py  sheets_worker.py  telegram_listener.py
src/betting_bot/delivery/: pick_notifier.py  pick_wizard.py  sheets_client.py  sheets_sync.py  sheets_worker.py  telegram_bot.py  telegram_handlers.py
src/betting_bot/ingestion/: _http.py  fixtures.py  normalizer.py  odds.py  schemas.py
src/betting_bot/persistence/: db.py  models.py  repo.py
src/betting_bot/persistence/migrations/: env.py
src/betting_bot/persistence/migrations/versions/: 5c188d55ae7c_initial_schema.py  80f0759a2448_add_pending_sheets_sync.py  82dac86fd3e0_add_sharp_overround_to_picks.py
src/betting_bot/pricing/: devigging.py  kelly.py  picks.py  value.py
tests/: conftest.py  factories.py
tests/fixtures/: api_football_epl_fixtures_sample.json  api_football_status.json  odds_api_epl_h2h_sample.json  odds_api_sports.json
tests/integration/: test_ingestion.py  test_schema.py
tests/unit/: test_devigging.py  test_ingestion_clients.py  test_kelly.py  test_ledger.py  test_logging_setup.py  test_normalizer.py  test_pick_notifier.py  test_pick_wizard.py  test_picks.py  test_pipeline_full.py  test_pricing_properties.py  test_repo_mark_placed.py  test_repo_sheets_queue.py  test_repos.py  test_run_pipeline.py  test_schema_constraints.py  test_schemas.py  test_sheets_client.py  test_sheets_sync_transforms.py  test_sheets_worker.py  test_telegram_auth.py  test_telegram_handlers.py  test_value.py  test_yaml_config.py
