[project]
name = "betting_bot"
version = "0.1.0"
description = "Value betting bot for football — detects EV+ picks via Pinnacle de-vigging vs EU books and notifies via Telegram."
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "rapidfuzz>=3.9",
    "scipy>=1.13",
    "python-telegram-bot>=21.0",
    "gspread>=6.1",
    "google-auth>=2.30",
    "structlog>=24.1",
    "click>=8.1",
    "rich>=13.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/betting_bot"]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-pyyaml>=6.0",
    "types-requests>=2.32",
    "ipython>=8.25",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "ARG"]
ignore = ["E501"]  # line too long — handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ARG"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["gspread.*", "telegram.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --strict-config"
markers = [
    "integration: tests that hit external services or filesystem",
    "slow: tests that take >1s",
]

[tool.coverage.run]
source = ["src/betting_bot"]
branch = true
omit = [
    "*/migrations/*",
    "*/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_also = [
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
